[package]
name = "merkle-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.17.27"
anyhow = "1.0.80"
blake2-rfc = "0.2.18"
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain.git"}
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
sha3 = "0.10.8"
csv = "1.3.0"
hex = "0.4.3"
rayon = "1.8.1"
thiserror = "1.0.58"
base32 = "0.4.0"
bech32 = "0.9.1"
bs58 = "0.5.0"
[dev-dependencies]
rand = "0.8"